--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "dropzone": "^6.0.0-beta.2",
     "flowbite-react": "^0.11.7",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
