Add basic display container

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-json-viewer": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
