--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-json-tree": "^0.20.0",
+    "react-json-view-lite": "^2.4.1",
     "react-json-viewer": "^3.0.1"
   },
   "devDependencies": {
