--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dropzone": "^6.0.0-beta.2",
+    "exifreader": "^4.30.1",
     "flowbite-react": "^0.11.7",
     "next": "^15.3.0",
     "react": "^19.1.0",
